# natvox-ai

./: .gitignore  ARCHITECTURE.md  LIVE_AUDIO_GUIDE.md  LIVE_AUDIO_QUICKSTART.md  Readme.md  SIMILARITY_FIX_GUIDE.md  UPGRADE_GUIDE.md  VOICE_CONVERSION_SUMMARY.md  VOICE_CONVERSION_WALKTHROUGH.md  app.py  audio_utils.py  config.py  dataset.py  debug_similarity.py  inference.py  live_audio.py  live_inference.py  main.py  model.py  pyproject.toml  requirements.txt  test_adapter.py  test_installation.py  train.py  train_improved.py  utils.py  viz_utils.py  vocalis_pipeline.py  voice_conversion.py
experiments/: full_pipeline.py  vocalis_experiment.py
paper/: fig_vocalis_arch.tex
tools/: cleanup_project.py  validate_dataset.py
voice_data/my_pairs/: README.md
